<resources>
    <string name="app_name">Travel</string>
    <string name="enter_your_city">Enter city name</string>
    <string name="enter_your_country">Enter country name</string>
    <string name="go">go</string>
    <string name="travel">Travel</string>
    <string name="after_three_hours">After 3 hours</string>
    <string name="after_six_hours">After 6 hours</string>
    <string name="after_nine_hours">After 9 hours</string>
    <string name="restaurants">restaurants</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="content">Restaurant Image</string>
    <string name="add_to_favorite">Add to favorite list</string>
    <string name="content_image">This is cloud image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="city_value">Please enter a city value</string>
    <string name="country_value">Please enter a country value</string>
    <string name="city_and_country_value">Please enter city and country to continue</string>
    <string name="network_fail">failed to connect to API</string>
    <string name="added_sussecc">Restaurant added to the favorit list successfully</string>
    <string name="sorry">Sorry city</string>
</resources>
