<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/gradiant_main"
    android:id="@+id/container"

    tools:context="com.example.monamahdi.capstoneapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:textSize="60sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="start|end"
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/TV_main"
                android:layout_width="200dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_your_city"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ET_city"
                android:layout_width="200dp"
                android:layout_centerVertical="true"
                android:layout_height="30dp"
                android:layout_below="@+id/TV_main"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:id="@+id/TV_country"
                android:layout_width="200dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_below="@+id/ET_city"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_your_country"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ET_country"
                android:layout_width="200dp"
                android:layout_centerVertical="true"
                android:layout_height="30dp"
                android:layout_below="@+id/TV_country"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:background="@drawable/edittext_background"/>
        </RelativeLayout>

        <Button
            android:id="@+id/TV_go"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/go"
            android:elevation="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_background"
            android:textColor="#fff"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />


    </RelativeLayout>


</FrameLayout>
