<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77b0f4"
    tools:context="com.example.monamahdi.capstoneapp.WeatherFragment">
    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:text=""/>
    <LinearLayout
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:ignore="ContentDescription"
            android:background="@drawable/ic_cloud_queue_black_24dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:text=""/>

    <LinearLayout
        android:id="@+id/LT_temp_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TV_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="60sp"
            android:textColor="#fff"
            android:textStyle=""
            android:text="26"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textColor="#fff"
            android:text="C"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LT_temp_info"
        android:layout_marginTop="100dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:text="@string/after_three_hours"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/temp_min"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:text="/"/>
                <TextView
                    android:id="@+id/temp_max"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/date1"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_six_hours"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/temp_min1"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:text="/"/>
                <TextView
                    android:id="@+id/temp_max1"
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:text="@string/after_nine_hours"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/temp_min2"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:text="/"/>
                <TextView
                    android:id="@+id/temp_max2"
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
